# topologyx

./: .gitignore  .pre-commit-config.yaml  3DShape.ipynb  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Filtrations.ipynb  LICENSE  Makefile  README.md  ToMaTo.ipynb  license.txt  pyproject.toml  readme.md  renovate.json  requirements.txt  tutorial-clustering.ipynb  tutorial-filtration.ipynb
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: cleanup.yml  continuous-integration.yml  pypi-release.yml  release.yml  topologyx.yml  workflows-cleanup.yml
architecture/: channels.py  imports.py  layers.py
clustering/: clusters.py  imports.py  union_find.py
examples/: clustering.ipynb  clustering.py  filtrations.ipynb  filtrations.py
examples/notebooks/: clustering.ipynb  filtrations.ipynb
examples/samples/: eegs.npy  hand.off
filtration/: filtration.py  imports.py  time_series.py  toolbox.py  utils.py
src/topologyx/channels/: __init__.py  silhouette.py
src/topologyx/clustering/: __init__.py  unionfind.py  utils.py
src/topologyx/filtrations/: __init__.py  levels.py  utils.py
tests/: conftest.py  test_tomato_clustering.py  test_union_find.py
