[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
color = true
line-length = 88
skip-string-normalization = true
target-version = ['py312']

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
python_version = "3.12"
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
disable_error_code = ["type-arg"]

[tool.poetry]
authors = ["Meryll Dindin <merylldin@gmail.com>"]
description = "Topology data analysis routines"
name = "topologyx"
readme = "README.md"
version = "1.0.2"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gudhi = "^3.10.1"
keras = "^3.4.1"
matplotlib = "^3.9.0"
numpy = "^2.0.0"
plotly = "^5.22.0"
scikit-learn = "^1.5.1"
tqdm = "^4.66.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.0"
pytest = "^8.1.0"
pytest-cov = "^5.0.0"
ruff = "^0.3.0"

[tool.poetry.group.types]
optional = true

[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
topologyx = "topologyx.main:cli"

[tool.pytest.ini_options]
addopts = "--no-header -rA"
pythonpath = ["."]

[tool.ruff]
extend-include = ["*.ipynb", "*.toml"]
line-length = 88
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
dummy-variable-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignore = ["D100", "D101", "E501"]
ignore-init-module-imports = true
select = ["E", "F", "I001", "W"]

[tool.ruff.lint.isort]
section-order = [
    "first-party",
    "future",
    "local-folder",
    "standard-library",
    "third-party",
]
