[project]
name = "topologyx"
version = "1.1.0"
description = "Topology data analysis routines"
authors = [{ name = "Meryll Dindin", email = "merylldin@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.13.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gudhi==3.11.0",
    "keras==3.13.0",
    "marimo==0.18.4",
    "matplotlib==3.10.8",
    "numpy==2.4.0",
    "plotly==6.5.0",
    "scikit-learn==1.8.0",
    "tqdm==4.67.1",
]

[project.scripts]
topologyx = "topologyx.main:cli"

[project.urls]
Homepage = "https://github.com/merylldindin/topologyx"
Repository = "https://github.com/merylldindin/topologyx"

[dependency-groups]
dev = [
    "commitizen==4.10.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.10",
    "ty==0.0.7",
    "marimo==0.18.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/topologyx"]

[tool.pytest.ini_options]
addopts = "--no-header -rA"
pythonpath = ["."]

[tool.ruff]
extend-include = ["*.toml"]
line-length = 88
output-format = "grouped"
show-fixes = true
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
dummy-variable-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignore = ["D100", "D101", "E402", "E501"]
select = ["E", "F", "I001", "W"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src/topologyx"]
exclude = ["**/__pycache__/**"]

[tool.ty.rules]
unresolved-import = "warn"
unresolved-attribute = "warn"
invalid-argument-type = "warn"
possibly-missing-attribute = "warn"

[tool.ty.terminal]
error-on-warning = false
output-format = "full"
